--- a/frontend-licity/src/app/components/list-projects/list-projects.component.html
+++ b/frontend-licity/src/app/components/list-projects/list-projects.component.html
@@ -18,8 +18,8 @@
       <tr *ngFor="let project of projects">
         <td>
           <div *ngFor="let img of project.images">
-            <a href="{{ img.url }}" target="_blank">
-              <img src="{{ img.url }}" alt="{{ img.name_img }}" srcset="" width="60px" height="60px"
+            <a href="http://localhost:3000/images/{{ img.url }}" target="_blank">
+              <img src="http://localhost:3000/images/{{ img.url }}" alt="{{ img.name_img }}" srcset="" width="60px" height="60px"
                 style="border-radius: 10px; position: absolute;"></a>
           </div>
         </td>
@@ -57,8 +57,8 @@
       </div>
       <div class="p-4">
         <div *ngFor="let img of detailsProject?.images">
-          <a href="{{ img.url }}" target="_blank">
-            <img src="{{ img.url }}" alt="{{ img.name }}" srcset="" width="100%" style="border-radius: 10px;"></a>
+          <a href="http://localhost:3000/images/{{ img.url }}" target="_blank">
+            <img src="http://localhost:3000/images/{{ img.url }}" alt="{{ img.name }}" srcset="" width="100%" style="border-radius: 10px;"></a>
         </div>
         <div *ngIf="detailsProject" style="text-align: center; text-transform: capitalize;">
           <h4>{{ detailsProject.name }}</h4>
